--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,14 @@ group= "fr.jackcartersmith.orbsat" // http://maven.apache.org/guides/mini/guide-
 archivesBaseName = "OrbitalSatellite"
 
 apply plugin: 'java'
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 minecraft {
     version = "1.7.10-10.13.4.1558-1.7.10"
 		replace '${version}', project.version
-    runDir = "eclipse"
+    runDir = "rundir"
+	mappings = 'stable_12'
 }
 
 dependencies {
