--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ dependencies {
     compileOnly "mcp.mobius.waila:Hwyla:1.8.20-B35_1.12"
     compileOnly 'industrial-craft:industrialcraft-2:release:ex112'//'net.industrial-craft:industrialcraft-2:2.8.+'
     compileOnly 'baubles:Baubles:1.12:1.5.2'
-    deobfCompile 'elucent:albedo:2.0-SNAPSHOT'
+    deobfCompile "albedo:albedo:0.1.3"
 
 }
 
