--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,10 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 version = "0.1.3"
-//group = "fr.jackcartersmith.orbsat" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-group = "jackcartersmith"
-def archiveGroup = group
-archivesBaseName = "OrbitalSatellite"
+group = "fr.jackcartersmith.orbsat" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+//group = "jackcartersmith"
+//def archiveGroup = group
+//archivesBaseName = "OrbitalSatellite"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -25,8 +25,8 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.5.2768"
-    runDir = "run"
+    version = "1.12.2-14.23.5.2838"
+    runDir = "eclipse"
     
     // the mappings can be changed at any time, and must be in the following format.
     // snapshot_YYYYMMDD   snapshot are built nightly.
@@ -65,9 +65,6 @@ repositories {
         name 'CoFH Maven'
         url "http://maven.covers1624.net/"
     }
-    maven { // Albedo Lights
-        url 'https://repo.elytradev.com/'
-    }
 }
 
 dependencies {
@@ -94,12 +91,10 @@ dependencies {
 	
     compileOnly "mezz.jei:jei_1.12.2:4.10.+"
     compileOnly "cofh:RedstoneFlux:1.12-2.+:deobf"
-    compileOnly "opencomputers:OpenComputers:MC1.12.2:1.7.2.67"//li.cil.oc:OpenComputers:MC1.12.1-1.7.0.+"
-    compileOnly "mcp.mobius.waila:Hwyla:1.8.20-B35_1.12"
-    compileOnly 'industrial-craft:industrialcraft-2:release:ex112'//'net.industrial-craft:industrialcraft-2:2.8.+'
-    compileOnly 'baubles:Baubles:1.12:1.5.2'
-    deobfCompile 'elucent:albedo:2.0-SNAPSHOT'
-
+    compile "li.cil.oc:OpenComputers:MC1.12.2-1.7.+:api"
+    compile "mcp.mobius.waila:Hwyla:1.8.26-B41_1.12.2:api"
+    //compileOnly 'industrial-craft:industrialcraft-2:release:ex112'//'net.industrial-craft:industrialcraft-2:2.8.+'
+    //compileOnly 'baubles:Baubles:1.12:1.5.2'
 }
 
 processResources {
