--- a/build.gradle
+++ b/build.gradle
@@ -1,47 +1,20 @@
-import groovy.json.JsonOutput
-
 buildscript {
     repositories {
         jcenter()
+		mavenCentral()
+		mavenLocal()
         maven { url = "http://files.minecraftforge.net/maven" }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+		classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.0.1"
     }
-}
-apply plugin: 'net.minecraftforge.gradle.forge'
-//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
-
-
-version = "0.1.3"
-group = "fr.jackcartersmith.orbsat" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-//group = "jackcartersmith"
-//def archiveGroup = group
-//archivesBaseName = "OrbitalSatellite"
-
-sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
-compileJava {
-    sourceCompatibility = targetCompatibility = '1.8'
-}
-
-minecraft {
-    version = "1.12.2-14.23.5.2838"
-    runDir = "eclipse"
-    
-    // the mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   snapshot are built nightly.
-    // stable_#            stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // simply re-run your setup task after changing the mappings to update your workspace.
-    mappings = "stable_39"
-	//mappings = "snapshot_20171003"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
 repositories {
-    maven { // JEI & Tinkers
-        name 'DVS1 Maven FS'
-        url 'http://dvs1.progwml6.com/files/maven'
+    maven {
+        name = "JEI"
+        url "http://dvs1.progwml6.com/files/maven"
     }
     maven { // HWYLA
         name "TehNuts WAILA fork"
@@ -65,6 +38,32 @@ repositories {
         name 'CoFH Maven'
         url "http://maven.covers1624.net/"
     }
+}
+
+apply plugin: 'net.minecraftforge.gradle.forge'
+
+ext.buildNumber = "0"
+if (System.getenv("BUILD_NUMBER") != null) {
+	buildNumber = System.getenv("BUILD_NUMBER")
+
+}
+
+version = "$baseVersion.$buildNumber"
+group = "fr.jackcartersmith.orbsat"
+archivesBaseName = "OrbitalSatellite"
+
+sourceCompatibility = targetCompatibility = 1.8
+compileJava {
+    sourceCompatibility = targetCompatibility = 1.8
+}
+
+minecraft {
+    version = "$project.minecraftVersion-$project.forgeVersion"
+    runDir = "eclipse"
+    
+    mappings = "stable_39"
+	//mappings = "snapshot_20171003"
+    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
 dependencies {
@@ -107,7 +106,7 @@ processResources {
         include "mcmod.info"
 
         // replace version and mcversion
-        expand "version": project.version, "mcversion": "1.12"
+        expand "version": project.version, "mcversion": "1.12.2"
     }
 
     // copy everything else, thats not the mcmod.info
