--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
+baseVersion=1.0
+minecraftVersion=1.12.2
+forgeVersion=14.23.5.2838
 org.gradle.jvmargs=-Xmx4G
+
